Fix broken images

--- a/beaver.html
+++ b/beaver.html
@@ -27,7 +27,7 @@
     <div class="row">
         <div class="col s12 m7">
             <div class="card">
-                <div class="card-image"><img height="70%" src="img/beaver_1.jpg">
+                <div class="card-image"><img height="70%" src="https://raw.githubusercontent.com/yutarochan/Parkr/master/img/beaver_1.JPG">
                     <span class="card-title">West Beaver Ave Garage</span>
                 </div>
 
