--- a/fraser.html
+++ b/fraser.html
@@ -27,7 +27,7 @@
     <div class="row">
         <div class="col s12 m7">
             <div class="card">
-                <div class="card-image"><img height="70%" src="img/fraser_1.jpg">
+                <div class="card-image"><img height="70%" src="https://raw.githubusercontent.com/yutarochan/Parkr/master/img/fraser_1.JPG">
                     <span class="card-title">135 S. Fraser St. Garage</span>
                 </div>
 
