--- a/pugh.html
+++ b/pugh.html
@@ -27,7 +27,7 @@
     <div class="row">
         <div class="col s12 m7">
             <div class="card">
-                <div class="card-image"><img height="70%" src="img/pugh_1.jpg">
+                <div class="card-image"><img height="70%" src="https://raw.githubusercontent.com/yutarochan/Parkr/master/img/pugh_1.JPG">
                     <span class="card-title">Pugh Street Garage</span>
                 </div>
 
